<resources>
    <string name="app_name">LuT Tools</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LuT Tools</string>
    <string name="nav_header_subtitle">googleplay@jeisfeld.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_bluetooth_status">Connection Status:</string>
    <string name="text_standalone_status">Standalone Processing Status:</string>
    <string name="text_processing_status">Processing Status:</string>
    <string name="text_power">Power:</string>
    <string name="text_min_power">Min Power:</string>
    <string name="text_power_change_duration">Pow Control:</string>
    <string name="text_cycle_length">Cyc Length:</string>
    <string name="text_frequency">Frequency:</string>
    <string name="text_wave">Wave:</string>
    <string name="text_running_probability">Run Prob:</string>
    <string name="text_avg_off_duration">Avg Off Dur:</string>
    <string name="text_avg_on_duration">Avg On Dur:</string>
    <string name="text_pulse_trigger">Trigger:</string>
    <string name="text_pulse_duration">Pulse Dur:</string>
    <string name="text_sensor_sensitivity">Sensitivity:</string>
    <string name="text_sensor_pulse_invert">Pulse inv:</string>
    <string name="text_end_time">(End Time)</string>

    <string name="menu_lob_0">Lob 0</string>
    <string name="menu_lob_1">Lob 1</string>
    <string name="menu_tadel_0">Tadel 0</string>
    <string name="menu_tadel_1">Tadel 1</string>
    <string name="menu_status">Status</string>
    <string name="menu_settings">Settings</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_shutdown">Shutdown</string>
    <string name="title_dialog_confirmation">Confirmation</string>
    <string name="message_dialog_confirmation_shutdown">Do you really want to shut down?</string>
    <string name="toast_bluetooth_required">Bluetooth not available - closing app</string>
    <string name="toast_failed_send">Failed to send message - no connection available</string>
    <string name="toast_permissions_missing">Permissions missing - the app cannot be used</string>

    <string name="key_statistics_initialversion" translatable="false">statistics_initialversion</string>
    <string name="key_statistics_firststarttime" translatable="false">statistics_firststarttime</string>
    <string name="key_statistics_countstarts" translatable="false">statistics_countstarts</string>
    <string name="key_pref_prevent_screen_timeout" translatable="false">pref_prevent_screen_timeout</string>
    <string name="pref_title_prevent_screen_timeout">Prevent Screen Timeout</string>
    <string name="key_pref_dummy_setting_battery_optimizations" translatable="false">pref_dummy_setting_battery_optimizations</string>
    <string name="key_pref_dummy_shutdown_raspi" translatable="false">pref_dummy_shutdown_raspi</string>
    <string name="pref_title_dummy_setting_battery_optimizations">Configure battery optimizations</string>
    <string name="pref_title_dummy_shutdown_raspi">Shutdown Raspberry Pi</string>
_
    <string-array name="values_mode_lob">
        <item>Off</item>
        <item>Wave</item>
        <item>Random 1</item>
        <item>Random 2</item>
        <item>External Input</item>
    </string-array>

    <string-array name="values_mode_tadel">
        <item>Off</item>
        <item>Fixed</item>
        <item>Random 1</item>
        <item>Random 2</item>
        <item>External Input</item>
    </string-array>

    <string-array name="values_wave_tadel">
        <item>Constant</item>
        <item>Rampup low freq</item>
        <item>Rampup high freq</item>
        <item>Ramp up/down low freq</item>
        <item>Ramp up/down high freq</item>
        <item>Frequency up/down</item>
        <item>Ramp up/down wobble</item>
        <item>Frequency up/wobble</item>
        <item>Ramp up/down impulse</item>
    </string-array>

    <string-array name="values_pulse_trigger">
        <item>Random Image Display</item>
        <item>Breath Training Hold</item>
        <item>Device Acceleration</item>
        <item>Microphone Input</item>
        <item>Breath Training Microphone Input</item>
        <item>DS Messenger</item>
    </string-array>
</resources>
