<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lob_0"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lob_0" />
        <item
            android:id="@+id/nav_tadel_0"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tadel_0" />
        <item
            android:id="@+id/nav_lob_1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lob_1" />
        <item
            android:id="@+id/nav_tadel_1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_tadel_1" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_status"
            android:title="@string/menu_status" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
