<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_status">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.jeisfeld.lut.app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_lob_0"
        android:name="de.jeisfeld.lut.app.ui.lob.Lob0Fragment"
        android:label="@string/menu_lob_0"
        tools:layout="@layout/fragment_lob" />

    <fragment
        android:id="@+id/nav_lob_1"
        android:name="de.jeisfeld.lut.app.ui.lob.Lob1Fragment"
        android:label="@string/menu_lob_1"
        tools:layout="@layout/fragment_lob" />

    <fragment
        android:id="@+id/nav_status"
        android:name="de.jeisfeld.lut.app.ui.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />
</navigation>