<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".ui.control.ControlFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bluetooth_status"
        android:textAlignment="center"
        android:textSize="@dimen/text_header_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchBluetoothStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:switchMinWidth="64dp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutControlInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/seekbar_height" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_processing_status"
            android:textAlignment="center"
            android:textSize="@dimen/text_header_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchActive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:switchMinWidth="64dp" />

            <ImageView
                android:id="@+id/iconPowerStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_icon_power_off"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/seekbar_height" />

        <Spinner
            android:id="@+id/spinnerMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/seekbar_height" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:id="@+id/tableRowPower">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_power" />

                <SeekBar
                    android:id="@+id/seekBarPower"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="255" />

                <TextView
                    android:id="@+id/textViewPower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow android:id="@+id/tableRowMinPower">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_min_power" />

                <SeekBar
                    android:id="@+id/seekBarMinPower"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="100" />

                <TextView
                    android:id="@+id/textViewMinPower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowPowerChangeDuration"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_power_change_duration" />

                <SeekBar
                    android:id="@+id/seekBarPowerChangeDuration"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="255" />

                <TextView
                    android:id="@+id/textViewPowerChangeDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowCycleLength"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_cycle_length" />

                <SeekBar
                    android:id="@+id/seekBarCycleLength"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="25" />

                <TextView
                    android:id="@+id/textViewCycleLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowFrequency"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_frequency" />

                <SeekBar
                    android:id="@+id/seekBarFrequency"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="1000"
                    android:progress="1000" />

                <TextView
                    android:id="@+id/textViewFrequency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowWave"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_wave" />

                <Spinner
                    android:id="@+id/spinnerWave"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_spinner_width"
                    android:paddingStart="@dimen/non_seekbar_left_padding"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow android:id="@+id/tableRowRunningProbability">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_running_probability" />

                <SeekBar
                    android:id="@+id/seekBarRunningProbability"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="100"
                    android:progress="50" />

                <TextView
                    android:id="@+id/textViewRunningProbability"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow android:id="@+id/tableRowAvgOffDuration">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_avg_off_duration" />

                <SeekBar
                    android:id="@+id/seekBarAvgOffDuration"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="255" />

                <TextView
                    android:id="@+id/textViewAvgOffDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow android:id="@+id/tableRowAvgOnDuration">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_avg_on_duration" />

                <SeekBar
                    android:id="@+id/seekBarAvgOnDuration"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="255" />

                <TextView
                    android:id="@+id/textViewAvgOnDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRowPulseTrigger"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_pulse_trigger" />

                <Spinner
                    android:id="@+id/spinnerPulseTrigger"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_spinner_width"
                    android:paddingStart="@dimen/non_seekbar_left_padding"
                    tools:ignore="RtlSymmetry" />
            </TableRow>

            <TableRow android:id="@+id/tableRowPulseDuration">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_pulse_duration" />

                <SeekBar
                    android:id="@+id/seekBarPulseDuration"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="255" />

                <TextView
                    android:id="@+id/textViewPulseDuration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow android:id="@+id/tableRowSensorSensitivity">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_sensor_sensitivity" />

                <SeekBar
                    android:id="@+id/seekBarSensorSensitivity"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_seekbar_width"
                    android:max="100" />

                <TextView
                    android:id="@+id/textViewSensorSensitivity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="@integer/selector_text_width"
                    android:textAlignment="viewEnd" />

            </TableRow>

            <TableRow android:id="@+id/tableRowPulseInvert">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:layout_weight="@integer/selector_label_width"
                    android:text="@string/text_sensor_pulse_invert" />

                <CheckBox
                    android:id="@+id/checkBoxPulseInvert"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/seekbar_height"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="@integer/selector_spinner_width"
                    android:paddingStart="@dimen/non_seekbar_left_padding"
                    tools:ignore="RtlSymmetry" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>